refactor: LLM 프롬프트 개선